Fix measure line wrapping

--- a/app/css/main.sass
+++ b/app/css/main.sass
@@ -7,7 +7,6 @@ $num: 'Open Sans'
 
 html
   font-size: 100%
-  box-sizing: border-box
 
 body
   font-family: $body
@@ -177,11 +176,12 @@ section
       content: " "
       clear: both
     > li
+      box-sizing: border-box
       display: block
       float: left
       border: 1px solid #E5E5E5
-      width: calc(23% - 1px)
-      margin: calc(1% - 1px)
+      width: 23%
+      margin: 1%
       height: 100px
       cursor: pointer
       &.part
@@ -229,10 +229,10 @@ section
       width: 100%
       z-index: 1
       .measure
+        box-sizing: border-box
         height: 100%
         float: right
         border-left: 1px dashed #b2b2b2
-        margin-right: -1px
     ul.notes
       position: relative
       width: 100%
